fix bugs in templates and domain

--- a/app/templates/email-verification.html
+++ b/app/templates/email-verification.html
@@ -145,7 +145,7 @@
                         <tr>
                           <td align='left' style='padding: 0 56px 28px 56px;' valign='top'>
                             <div style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 18px; color: #333;'>Welcome! Please click the following link to confirm that <strong>{{USER_EMAIL}}</strong> is
-                              your email address to log in NYUSHer:</div>
+                              your email address to log in NYUSHer. If the button below is not clickable, please copy  {{URL}} to your browser.</div>
                           </td>
                         </tr>
                         <tr>
