--- a/app/templates/login-verification.html
+++ b/app/templates/login-verification.html
@@ -144,7 +144,7 @@
                         </tr>
                         <tr>
                           <td align='left' style='padding: 0 56px 28px 56px;' valign='top'>
-                            <div style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 18px; color: #333;'>Please click the following link to confirm your login:</div>
+                            <div style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 18px; color: #333;'>Please click the following link to confirm your login. If the button below is not clickable, please copy  {{URL}} to your browser.</div>
                           </td>
                         </tr>
                         <tr>
