--- a/app/templates/verification-success.html
+++ b/app/templates/verification-success.html
@@ -165,7 +165,7 @@
                         <tr>
                           <td align='center' style='padding: 0 56px 28px 56px;' valign='middle'>
                             <a style="border: 0;" href="https://expo.io/@nhibiki/NYUSHer">
-                              <img alt="NYUSHer" width="70" height="70" style="vertical-align: middle;" src="https://zoetic-zephyr.github.io/img/logo.png"
+                              <img alt="NYUSHer" width="70" height="70" style="vertical-align: middle;" src="https://zoetic-zephyr.github.io/img/NYUSHer-logo-public.png"
                               />
                             </a>
                           </td>
