--- a/app/templates/bus.html
+++ b/app/templates/bus.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bus Schedule</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='bus/css/bus.css')}}">
+    <link rel="stylesheet" href="css/bus.css">
     <link href="https://cdn.bootcss.com/semantic-ui/2.3.1/semantic.min.css" rel="stylesheet">
     <link href="https://fonts.loli.net/css?family=Quicksand:400,700" rel="stylesheet">
 </head>
@@ -16,8 +16,10 @@
 
 
     <div class="ui container" id="widget" style="margin-top: 10px;">
-        <h1 id="title">Next Shuttle</h1>
-
+            <form id="searchSub">
+                <h1 id="title">Next Shuttle</h1>
+                <button id="search" type="submit" class="ui icon button"><i class="search icon"></i></button>
+            </form>
         
         <div id="D2A">
             <h4 class="head">From Dorm:</h4>
@@ -33,7 +35,7 @@
                 <div id="A2D2" class="item">A2D2</div>
             </div>
         </div>
-        <img id="bus-schedule" src="{{ url_for('static', filename='bus/img/bus_schedule.JPG')}}" alt="bus_schedule">
+        <img id="bus-schedule" src="img/bus_schedule.JPG" alt="bus_schedule">     
 
         <!-- commented out for auto load bus schedule -->
         <!-- <form id="searchSub"><button id="search" type="submit" class="ui icon button"><i class="search icon"></i></button></form> -->
@@ -45,7 +47,7 @@
 
     <script src="https://cdn.bootcss.com/semantic-ui/2.3.1/semantic.min.js"></script>
 
-    <script src="{{ url_for('static', filename='bus/js/bus.js')}}"></script>
+    <script src="./js/bus.js"></script>
 </body>
 
 </html>
