--- a/app/templates/bus.html
+++ b/app/templates/bus.html
@@ -36,7 +36,7 @@
                 <div id="A2D2" class="item">A2D2</div>
             </div>
         </div>
-        <img id="bus-schedule" src="img/bus_schedule.JPG" alt="bus_schedule">     
+        <img id="bus-schedule" src="{{ url_for('static', filename='bus/img/bus_schedule.JPG')}}" alt="bus_schedule">     
 
         <!-- commented out for auto load bus schedule -->
         <!-- <form id="searchSub"><button id="search" type="submit" class="ui icon button"><i class="search icon"></i></button></form> -->
