--- a/app/static/sp/css/prof.css
+++ b/app/static/sp/css/prof.css
@@ -1,3 +1,7 @@
+body{
+    background: linear-gradient(to right, #FF5974, #FFBCC3);
+}
+
 #headShot{
 	margin: 4% 4%;
 	width: 100px;
@@ -38,4 +42,8 @@
 #searchSub{
     margin-left: 5px;
     margin-right: 5px;
+}
+
+#searchAgain{
+    background: linear-gradient(to right, #fd677f, #FFBCC3);
 }
