--- a/app/templates/prof.html
+++ b/app/templates/prof.html
@@ -11,7 +11,12 @@
 </head>
 <body>
 
-  <div class="ui list" style="margin-top: 60px;">
+  <div class="ui list">
+      <button id="searchAgain" class="ui labeled icon button">
+          <i class="undo icon"></i>
+          Search another professor!
+        </button>
+
     <div class="item">
       <img class="ui small rounded image" id="headShot" src="https://file.yuuno.cc/oSPawzcy">
       <div class="content" id="professorInfo">
@@ -57,6 +62,10 @@
   </div>
 
 
+
+<!--   <div class="ui raised segment">
+    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+  </div> -->
 
 
   <script src="https://cdn.bootcss.com/axios/0.18.0/axios.min.js"></script>
